--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 env/
+web-development-with-python/work_manager/\.idea/
+
+web-development-with-python/work_manager/work_manager/__pycache__/
+
+web-development-with-python/work_manager/taskmanager/__pycache__/
